--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
+        "symfony/orm-pack": "^1.0",
+        "symfony/validator": "^4.1",
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
