--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "fzaninotto/faker": "^1.8",
         "symfony/dotenv": "^4.1",
         "symfony/web-server-bundle": "^4.1"
     },
