--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,17 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "sensio/framework-extra-bundle": "^5.2",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "^4.1",
         "symfony/flex": "^1.0",
+        "symfony/form": "^4.1",
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
         "symfony/orm-pack": "^1.0",
+        "symfony/security-csrf": "^4.1",
+        "symfony/twig-bridge": "^4.1",
+        "symfony/twig-bundle": "^4.1",
         "symfony/validator": "^4.1",
         "symfony/yaml": "^4.1"
     },
@@ -17,6 +23,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "fzaninotto/faker": "^1.8",
         "symfony/dotenv": "^4.1",
+        "symfony/maker-bundle": "^1.6",
         "symfony/web-server-bundle": "^4.1"
     },
     "config": {
