--- a/.env.dist
+++ b/.env.dist
@@ -9,9 +9,18 @@ APP_SECRET=5eba67e64f97a4c5071ce601207d1f09
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
 
+
+###> PROJECT SETTINGS ###
+PROJECT_NAME=jobeet
+PROJECT_APP_PATH=./
+PROJECT_BASE_URL=jobeet.local
+MYSQL_ROOT_PASSWORD=password
+MYSQL_DATABASE=jobeet
+###< PROJECT SETTINGS ###
+
 ###> doctrine/doctrine-bundle ###
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root:password@db:3306/jobeet
 ###< doctrine/doctrine-bundle ###
