Install symfony components

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/apache-pack": "^1.0",
+        "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
         "symfony/flex": "^1.0",
         "symfony/form": "^4.1",
@@ -24,6 +25,7 @@
         "fzaninotto/faker": "^1.8",
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.6",
+        "symfony/profiler-pack": "^1.0",
         "symfony/web-server-bundle": "^4.1"
     },
     "config": {
